# ffmpeg-libav-tutorial

./: .clang-format  .gitignore  0_hello_world.c  3_transcoding.c  CMakeLists.txt
